<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="469dp" >

            <ImageView
                android:id="@+id/misi_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/mission1_img" />

            <TextView
                android:id="@+id/namaMisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/misi_img"
                android:layout_below="@+id/misi_img"
                android:text="Menjelajah Jakarta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lokasiMisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/deskripsiMisi"
                android:layout_below="@+id/namaMisi"
                android:text="@string/alamat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/deskripsiMisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/namaMisi"
                android:layout_below="@+id/lokasiMisi"
                android:text="@string/hello_world"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonJoin"
                android:layout_alignBottom="@+id/buttonJoin"
                android:layout_alignRight="@+id/misi_img"
                android:layout_marginRight="16dp"
                android:text="@string/details" />

            <Button
                android:id="@+id/buttonJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deskripsiMisi"
                android:layout_marginTop="22dp"
                android:layout_toLeftOf="@+id/buttonDetails"
                android:text="@string/join" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>